Fix having wrong fonts in some cases
Fixes #509

--- a/src/core/core/_core.scss
+++ b/src/core/core/_core.scss
@@ -6,6 +6,7 @@ select,
 textarea {
   font-size: inherit;
   line-height: inherit;
+	font-family: inherit;
 }
 
 // Only display content to screen readers
